--- a/app/templates/reply_guy/index.html
+++ b/app/templates/reply_guy/index.html
@@ -70,11 +70,9 @@
                                 <i class="ph ph-chat-dots"></i>
                                 Reply Opportunities
                             </h3>
-                            <div class="info-icon">
+                            <div class="info-tooltip">
                                 <i class="ph ph-info"></i>
-                                <div class="tooltip">
-                                    Default lists update automatically.<br>Custom lists require manual update.
-                                </div>
+                                <span class="tooltip-text">Default lists update automatically. Custom lists require manual update.</span>
                             </div>
                         </div>
                         
@@ -171,10 +169,6 @@
             </button>
         </div>
         <div class="modal-body-clean">
-            <div class="info-box-modal">
-                <i class="ph ph-info"></i>
-                <span>Find the ID in your X list URL: <strong>x.com/i/lists/1234567890</strong></span>
-            </div>
             <div class="form-row-clean">
                 <div class="form-group">
                     <label for="panel-list-name">List Name</label>
@@ -184,6 +178,10 @@
                     <label for="panel-x-list-id">X List ID</label>
                     <input type="text" id="panel-x-list-id" class="form-input" placeholder="e.g., 1234567890">
                 </div>
+            </div>
+            <div class="info-box-modal">
+                <i class="ph ph-info"></i>
+                <span>Find the ID in your X list URL: <strong>x.com/i/lists/1234567890</strong></span>
             </div>
         </div>
         <div class="modal-footer-clean">
