--- a/app/templates/brain_dump/index.html
+++ b/app/templates/brain_dump/index.html
@@ -40,9 +40,16 @@
         <div class="notes-list" id="notesList">
             <div class="loading">
                 <div class="loading-spinner">
-                    <i class="ph ph-spinner"></i>
+                    <div class="premium-spinner-small">
+                        <div class="spinner-ring"></div>
+                        <div class="spinner-ring"></div>
+                        <div class="spinner-ring"></div>
+                        <div class="spinner-core">
+                            <i class="ph ph-sparkle"></i>
+                        </div>
+                    </div>
                 </div>
-                <div>Loading notes...</div>
+                <div class="loading-text">Loading notes<span class="loading-dots"><span>.</span><span>.</span><span>.</span></span></div>
             </div>
         </div>
     </aside>
