--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -405,9 +405,9 @@
                         <i class="ph ph-check-circle"></i>
                         <span>Analytics</span>
                     </div>
-                    <div class="preview-feature" style="opacity: 0.5;">
-                        <i class="ph ph-clock"></i>
-                        <span>Coming Soon</span>
+                    <div class="preview-feature">
+                        <i class="ph ph-check-circle"></i>
+                        <span>Upload Studio</span>
                     </div>
                 </div>
             </div>
